<resources>
    <string name="app_name">Tashilat</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Réglages</string>
    <string name="action_log_out">Se déconnecter</string>

    <string name="sign_in">Se connecter</string>
    <string name="register">Registrer</string>
    <string name="sign_up">S\'inscrire</string>
    <string name="search_title">Rechercher..</string>
    <string name="search_hint">Type name…</string>
    <string name="add_to_favourite">Ajouter aux favouris</string>
    <string name="configure_operator">Configurer operateur</string>
    <string name="menu_recharge">Recharge</string>
    <string name="menu_biller">Paiement facture</string>
    <string name="menu_achat_ticket">Achat ticket/billet</string>

    <string name="hello_blank_fragment">HELOOO</string>

    <!-- title Fragments -->
    <string name="accueil_title">Accueil</string>
    <string name="solde_title">Solde</string>
    <string name="depot_title">Dépots</string>
    <string name="conf_oper_title">Operateur</string>
    <string name="facture_title">Facture</string>
    <string name="change_pwd_title">Changer mot de passe</string>
    <string name="gerer_comptes_title">Mes comptes de paiement</string>
    <string name="histo_comptes_title">Hitoriques de mes comptes</string>
    <string name="services_title">Services</string>
    <string name="help_title">Help</string>
    <string name="profil_title">Profil</string>
    <string name="comptes_title">Comptes</string>
    <string name="paiemnt_fac_title">Eau &amp; Electricite</string>
    <string name="impot_taxes_title">Impots &amp; Taxes</string>
    <string name="recharge_title">Recharge</string>
    <string name="transfert_title">Transfert</string>
    <string name="achat_ticket_billet_title">Transport</string>
    <string name="paiemnt_commercant_title">Paiement commerçant</string>
    <string name="histo_trans_title">Histo des transactions</string>
    <string name="list_facture_title">Liste des factures</string>
    <string name="news_title">News</string>
    <string name="contact_us_title">Contactez-nous</string>
    <string name="notifications_title">Notifications</string>

    <string-array name="type_identifiant_array">
        <item>No Police</item>
        <item>No Compteur</item>
        <item>No tournee</item>
        <item>No Facture</item>
        <item>CIN</item>
    </string-array>
    <string-array name="type_identifiant_array_values" translatable="false">
        <item>6</item>
        <item>7</item>
        <item>3</item>
        <item>4</item>
        <item>1</item>
    </string-array>

    <string-array name="mod_paiement_array">
        <item>ESPECE</item>
        <item>CARTE</item>
    </string-array>

    <string-array name="type_identifiant_radeeo">
        <item>No Contrat</item>
        <item>No Facture</item>
    </string-array>
    <string-array name="type_identifiant_radeema">
        <item>No Police</item>
    </string-array>

    <string-array name="type_identifiant_radeef">
        <item>No Facture</item>
    </string-array>

    <string-array name="type_identifiant_onee">
        <item>No Facture</item>
        <item>No Police</item>
    </string-array>
    <string-array name="type_identifiant_amendis">
        <item>No Contrat</item>
        <item>No Facture</item>
        <item>No Client</item>
    </string-array>

    <string-array name="type_identifiant_rak">
        <item>No Contrat</item>
        <item>Id Client</item>
    </string-array>

    <string-array name="type_identifiant_ramsa">
        <item>No Facture</item>
        <item>No Police</item>
    </string-array>

    <string-array name="type_identifiant_redal">
        <item>CIL</item>
        <item>Identifiant Client</item>
        <item>No Facture</item>
    </string-array>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="default_gallery_storage">My Videos</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">3.5</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">http://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">http://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">http://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="login_failed">Mot de passe erroné</string>
    <string name="mot_passe_oublie"><u>mot de passe oublié?</u></string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_settings_headers">Settings with Headers</string>

    <string name="termsetservices">J\'ai lu et j\'accepte les termes et conditions d\'utilisation</string>
    <string name="get_accounts_permission_primer_message">Autocomplete email addresses</string>
    <string name="transition_designer_news_login" translatable="false">transition_designer_news_login</string>

</resources>
